// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations add item 1`] = `
Object {
  "me": Object {
    "address": "address",
    "email": "someemail@gmail.com",
    "facebook": null,
    "instagram": null,
    "items": Array [
      Object {
        "cost": 123.5,
        "description": null,
        "name": "somename",
      },
      Object {
        "cost": 123.5123,
        "description": "some desc",
        "name": "somenadsfame",
      },
    ],
    "phone": "123 1231 123",
    "restaurantName": "name",
    "twitter": null,
    "youtube": null,
  },
}
`;

exports[`mutations normal login 1`] = `
Object {
  "createUser": Object {
    "address": "123 street",
    "email": "example@gmail.com",
    "facebook": "face",
    "instagram": "insta",
    "phone": "123 3211 4564",
    "restaurantName": "some restaurant name here",
    "twitter": null,
    "youtube": null,
  },
}
`;

exports[`mutations normal login 2`] = `
Object {
  "createUser": Object {
    "address": "123 street",
    "email": "example1123123@gmail.com",
    "facebook": "face",
    "instagram": "insta",
    "phone": "123 3211 4564",
    "restaurantName": "some restaurant name here",
    "twitter": null,
    "youtube": null,
  },
}
`;
